java.xml.bind module
As I switch to Java 9 in the Docker container the java.xml.bind module
must be loaded as a module