@@ -8,4 +8,4 @@ USER appuser
 ADD target/aad-sample-webapp-0.1.0.jar app.jar
 
 ENV JAVA_OPTS=""
-ENTRYPOINT exec java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /app.jar
+ENTRYPOINT exec java $JAVA_OPTS --add-modules java.xml.bind -Djava.security.egd=file:/dev/./urandom -jar /app.jar
